--- a/firefly-iii-1.5.3.yaml
+++ b/firefly-iii-1.5.3.yaml
@@ -5,7 +5,7 @@ servers:
 info:
   title: Firefly III API v1.5.3
   description: |
-    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2021-09-17T13:33:56+00:00
+    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2021-09-17T13:55:07+00:00
   version: "1.5.3"
   contact:
     name: James Cole
@@ -448,10 +448,10 @@ paths:
             type: integer
             format: int32
           example: 10
-      summary: Returns all currencies of the user returned in a basic auto-complete array.
+      summary: Returns all currencies of the user returned in a basic auto-complete array. This endpoint is DEPRECATED and I suggest you DO NOT use it.
       responses:
         200:
-          description: A list of currencies with very basic information and the currency code between brackets.
+          description: A list of currencies with very basic information and the currency code between brackets. This endpoint is DEPRECATED and I suggest you DO NOT use it.
           content:
             application/json:
               schema:
