--- a/firefly-iii-1.5.3.yaml
+++ b/firefly-iii-1.5.3.yaml
@@ -5,7 +5,7 @@ servers:
 info:
   title: Firefly III API v1.5.3
   description: |
-    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2021-09-17T13:57:31+00:00
+    This is the documentation of the Firefly III API. You can find accompanying documentation on the website of Firefly III itself (see below). Please report any bugs or issues. You may use the "Authorize" button to try the API below. This file was last generated on 2021-09-17T14:11:39+00:00
   version: "1.5.3"
   contact:
     name: James Cole
@@ -298,10 +298,10 @@ paths:
             type: integer
             format: int32
           example: 10
-      summary: Returns all transactions, complemented with their ID, of the user returned in a basic auto-complete array.
+      summary: Returns all transactions, complemented with their ID, of the user returned in a basic auto-complete array. This endpoint is DEPRECATED and I suggest you DO NOT use it.
       responses:
         200:
-          description: A list of transactions with very basic information.
+          description: A list of transactions with very basic information. This endpoint is DEPRECATED and I suggest you DO NOT use it.
           content:
             application/json:
               schema:
@@ -8163,6 +8163,11 @@ components:
           type: string
           format: string
           example: "$"
+        currency_name:
+          type: string
+          format: string
+          example: "Euro"
+          description: Currency name for the currency used by this account.
         currency_decimal_places:
           type: integer
           format: int32
@@ -8261,6 +8266,12 @@ components:
           type: string
           format: string
           example: "2"
+          description: The ID of a transaction journal (basically a single split).
+        transaction_group_id:
+          type: string
+          format: string
+          example: "2"
+          description: The ID of the underlying transaction group.
         name:
           type: string
           format: string
@@ -8354,6 +8365,12 @@ components:
           type: string
           format: string
           example: "2"
+          description: The ID of a transaction journal (basically a single split).
+        transaction_group_id:
+          type: string
+          format: string
+          example: "2"
+          description: The ID of the underlying transaction group.
         name:
           type: string
           format: string
